--- a/style.css
+++ b/style.css
@@ -171,6 +171,8 @@ section{
 }
     aside{
     border-radius: 0px ;
+    width: 100%;
+        magin:0 auto;
     }
 @media (max-width:480px){ 
     
